add a simple initial guide to show how the game works

--- a/assets/css/cards.css
+++ b/assets/css/cards.css
@@ -89,6 +89,7 @@
 	font-weight: 400;
 	margin-top: 5rem;
 	font-size: 1.3rem;
+	user-select: none;
 } 
 .rotate {
 	transition: transform var(--rotate-time);
