--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -28,7 +28,7 @@ body {
 	flex-direction: column;
 }
 #guide-visualizer{
-	padding: 1rem;
+	padding: 1.5rem;
 	text-align: center;
 	color: var(--clr-text);
 	flex: 1;
@@ -36,25 +36,33 @@ body {
 	background-image: linear-gradient(to bottom, transparent, var(--clr-main));
 }
 #guide-visualizer h3{
-	color: var(--clr-accent);
+	font-size: clamp(1.1rem, 5vw, 1.5rem);
+	color: var(--clr-heading);
 }
 #guide-visualizer ol{
+	margin: 0;
+	padding: 0;
 	text-align: left;
-	color: var(--clr-accent);
+	list-style: none;
 }
+/*#guide-visualizer ol > li + li{
+	margin-top: .5rem;
+} */
 #guide-visualizer ul li{
-	margin: 1rem 0;
+	border-left: 1px solid var(--clr-accent);
+	padding: .5rem 0 .5rem 1rem;
 	color: var(--clr-text);
 }
 #guide-visualizer strong {
-	color: var(--clr-accent);
+	color: var(--clr-heading);
+	line-height: 1.5;
 }
 #letsplay{
 	display: block;
 	font-size: 1.2em;
 	margin: 1rem auto .5rem auto;
 	padding: .5rem;
-	color: var(--clr-text);
+	color: var(--clr-main);
 	background-color: var(--clr-accent);
 }
 ::backdrop {
@@ -179,7 +187,7 @@ body {
 }
 .dialog__content {
 	--border-width: 1px;
-	background-color: rgba(24, 24, 24, 0.8);
+	background-color: var(--clr-dialog);
 	max-width: 90vw;
 	height: auto;
 	border-radius: 10px;
@@ -189,7 +197,6 @@ body {
 	align-items: center;
 	gap: 2rem;
 	padding: 1.2rem 1.4rem;
-	color: white;
 	transition: all 1.5s;
 }
 .animate-dialog {
@@ -198,8 +205,9 @@ body {
 /* DIALOG TITLE */
 .dialog__content span {
 	font-weight: 500;
-	font-size: 1.7rem;
+	font-size: clamp(1.7rem, 5vw, 2rem);
 	text-align: center;
+	user-select: none;
 }
 .dialog__button {
 	display: flex;
@@ -212,32 +220,30 @@ body {
 	border-radius: 5px;
 	background-color: transparent;
 	border: var(--border-width) solid;
-	font-weight: 600;
+	font-weight: 500;
 	color: var(--clr-text);
 }
 /*styles of dialog content*/
 [data-content-type="win"] {
-	color: #32d832;
-	border: var(--border-width) solid #32d832;
+	color: var(--clr-win);
+	border: var(--border-width) solid var(--clr-win);
 }
 [data-content-type="lose"] {
-	color: #e93d50;
-	border: var(--border-width) solid #e93d50;
+	color: var(--clr-lose);
+	border: var(--border-width) solid var(--clr-lose);
 }
 [data-content-type="tie"] {
-	color: #6ca8e2;
-	border: var(--border-width) solid #6ca8e2;
+	color: var(--clr-tie);
+	border: var(--border-width) solid var(--clr-tie);
 }
 /*stylize the dialog button restart*/
 [data-content-type="win"] .dialog__restart {
-	border-color: #32d832;
+	border-color: var(--clr-win);
 }
 [data-content-type="lose"] .dialog__restart {
-	border-color: #e93d50;
+	border-color: var(--clr-lose);
 }
-.dialog__restart:active {
-	background-color: #ce1429;
-}
+
 .hide-button {
 	display: none;
 }
@@ -267,6 +273,7 @@ body {
 	transform-style: preserve-3d;
 	transition: all 300ms;
 	cursor: pointer;
+	color: var(--clr-text);
 }
 .btn-icon {
 	margin-right: 5px;
@@ -274,7 +281,6 @@ body {
 .button__action span {
 	font-size: 1.2rem;
 	font-weight: 700;
-	color: #f6f6f6;
 	transition: all 200ms;
 }
 .button__action:not(:disabled):active {
@@ -282,6 +288,7 @@ body {
 	transform: scale(0.9, 0.9);
 }
 .--shuffle {
+	color: var(--clr-main);
 	z-index: 0;
 	position: relative;
 	background-color: var(--clr-accent);
@@ -297,19 +304,22 @@ body {
 	position: absolute;
 	inset: 0;
 	width: 0;
-	background-color: var(--clr-load-shuffle);
+	background-color: var(--clr-accent);
 }
 .load-shuffle.--shuffle::after {
 	animation: shuffling var(--ld-shuffle) linear;
 }
 .--restart {
-	background-color: #181818;
+	color: var(--clr-accent);
+	background-color: transparent;
 }
 .--play {
+	color: var(--clr-main);
 	background-color: var(--clr-accent);
 }
 .button__action:disabled {
-	background-color: #e67380;
+	color: lightgrey;
+	background-color: var(--clr-secondary);
 	transition: all 300ms;
 	filter: brightness(30%);
 }
