--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,7 @@
 :root {
 	--left-right-pt: 1rem;
 }
+
 body {
 	background-color: var(--clr-main);
 	color: var(--clr-text);
@@ -12,15 +13,76 @@ body {
 	font-display: optional;
 	font-family: "Oxygen", sans-serif;
 }
+
+/* INITIAL MENU */
+
+.initial__menu{
+	--c1: #040404;
+	--c2: #0c0c0c;
+	--c3: #0f0f0f;
+	--c4: #151515;
+	display: grid;
+	grid-template-columns: 1fr;
+	place-content: center;
+	place-items: center;
+	gap: 5rem;
+	position: absolute;
+	inset: 0;
+	z-index: 100;
+	background-color: var(--clr-main);
+	background-image: linear-gradient(to bottom left, var(--c1), var(--c2), var(--c3), var(--c4));
+}
+.initial__menu h1{
+	color: var(--clr-heading);
+}
+.menu__start{
+	border-radius: var(--border-rd);
+	font-size: 1.3rem;
+	padding: .5rem 2rem;
+	background-color: var(--clr-accent);
+	color: var(--clr-button-text);
+	font-weight: var(--ft-wg-700);
+}
+.menu__help{
+	position: absolute;
+	bottom: 3rem;
+	left: 0;
+	padding: 1rem;
+	aspect-ratio: 1;
+	width: max-content;
+	font-size: 2rem;
+	color: var(--clr-accent);
+}
+.menu__help *{
+	display: block;
+}
 /*GUIDE DIALOG STYLE*/
+
+@keyframes showGuide{
+	from{
+		display: none;
+		transform: scale(.8, .8);
+		opacity: 0;
+	}
+	to{
+		display: block;
+		transform: scale(1, 1);
+		opacity: 1;
+	}
+}
+
 #guide-dialog {
 	padding: 0;
 	height: 100%;
 	width: 100%;
 	z-index: 100;
 	border: none;
+	will-change: transform, opacity;
 	background-color: transparent;
+	animation: showGuide 200ms var(--anim-time-func);
+	transform-origin: center;
 }
+
 #guide-dialog > div {
 	height: 100%;
 	background-color: var(--clr-secondary);
@@ -96,6 +158,7 @@ body {
 	right: var(--left-right-pt);
 }
 .points__numbers {
+	width: 3rem;
 	font-size: 2.5rem;
 	font-weight: var(--ft-wg-700);
 }
@@ -161,8 +224,8 @@ body {
 		opacity: 0;
 	}
 	50% {
-		opacity: 1;
 		transform: translateY(0);
+		opacity: 1;
 	}
 	100% {
 		transform: translateY(100%);
@@ -171,11 +234,12 @@ body {
 }
 #dialogWinLose {
 	background-color: transparent;
-	backdrop-filter: blur(2px);
-	-webkit-backdrop-filter: blur(2px);
+	backface-visibility: hidden;
+	-webkit-backface-visibility: hidden;
 	padding: 0;
 	border: none;
 	z-index: 10;
+	will-change: transform, opacity;
 }
 .dialog__content {
 	--border-width: 1px;
@@ -193,7 +257,7 @@ body {
 	transition: all 1.5s;
 }
 .animate-dialog {
-	animation: showDialogAnim 2.5s linear;
+	animation: showDialogAnim 2s var(--anim-time-func);
 }
 /* DIALOG TITLE */
 .dialog__content span {
@@ -256,7 +320,6 @@ body {
 	flex: 1;
 	transform-style: preserve-3d;
 	transition: all 300ms;
-	cursor: pointer;
 	color: var(--clr-button-text);
 }
 .btn-icon {
@@ -303,6 +366,7 @@ body {
 	color: crimson;
 	background-color: var(--clr-secondary);
 	transition: all 300ms;
+	cursor: auto;
 }
 /* FOOTER */
 footer {
@@ -359,6 +423,17 @@ footer {
 	max-width: 80%;
 	margin: 0 auto;
 	letter-spacing: 0.9px;
+}
+@keyframes hideMenuInitial{
+	to{
+		transform: scale(1.5, 1.5);
+		opacity: 0;
+		display: none;
+	}
+}
+[data-game-element]{
+	animation: hideMenuInitial 200ms forwards;
+	/* display: none; */
 }
 @media (max-width: 375px) {
 	.points__numbers,
