--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -27,6 +27,7 @@ body {
 	font-size: 1rem;
 }
 button {
+	cursor: pointer;
 	border: none;
 	background: none;
 	-webkit-tap-highlight-color: transparent;
