--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,10 +17,6 @@ body {
 /* INITIAL MENU */
 
 .initial__menu{
-	--c1: #040404;
-	--c2: #0c0c0c;
-	--c3: #0f0f0f;
-	--c4: #151515;
 	display: grid;
 	grid-template-columns: 1fr;
 	place-content: center;
@@ -30,7 +26,6 @@ body {
 	inset: 0;
 	z-index: 100;
 	background-color: var(--clr-main);
-	background-image: linear-gradient(to bottom left, var(--c1), var(--c2), var(--c3), var(--c4));
 }
 .initial__menu h1{
 	color: var(--clr-heading);
@@ -77,7 +72,6 @@ body {
 	width: 100%;
 	z-index: 100;
 	border: none;
-	will-change: transform, opacity;
 	background-color: transparent;
 	animation: showGuide 200ms var(--anim-time-func);
 	transform-origin: center;
@@ -426,12 +420,12 @@ footer {
 }
 @keyframes hideMenuInitial{
 	to{
-		transform: scale(1.5, 1.5);
 		opacity: 0;
 		display: none;
 	}
 }
 [data-game-element]{
+	will-change: opacity;
 	animation: hideMenuInitial 200ms forwards;
 	/* display: none; */
 }
