--- a/assets/css/vars.css
+++ b/assets/css/vars.css
@@ -1,32 +1,33 @@
 
 :root{
-	--rotate-time: 600ms;
-	--elevate-time: 630ms;
-	--border-rd: calc(1vw / .5);
-	--aspect: 1.1 / 1.6;
-	--shuffle-t: 500ms;
-	--ld-shuffle: calc(var(--shuffle-t) * 2);
-	--ft-wg-300: 300;
-	--ft-wg-700: 700;
-	--anim-time-func: cubic-bezier(0.075, 0.82, 0.165, 1);
-	--rotate-time-func: cubic-bezier(0.175, 0.885, 0.32, 1.275);
-	/* COLORS */
-	
-	--clr-main: #090D10;
-	--clr-secondary: #21292C;
-	--clr-card: #0e1418;
-	--clr-dialog: #090D1090;
-	--clr-attr-item: #090d10;
-	--clr-button-text: var(--clr-main);
-	--clr-accent: #E3DDA4;
-	--clr-heading: #C2B477;
-	--clr-load-shuffle: crimson;
-	--clr-text: #f1f1f1;
-	--clr-legendary: #f8dc46;
-	--clr-win: lawngreen;
-	--clr-lose: crimson;
-	--clr-tie: lightsteelblue;
-	--clr-attr-list: rgba(5, 5, 5, 0.8);
+  	--rotate-time: 600ms;
+  	--elevate-time: 630ms;
+  	--border-rd: 1vh;
+  	--aspect: 1.1 / 1.6;
+  	--shuffle-t: 500ms;
+  	--ld-shuffle: calc(var(--shuffle-t) * 2);
+  	--ft-wg-300: 300;
+  	--ft-wg-700: 700;
+  	--anim-time-func: cubic-bezier(0.075, 0.82, 0.165, 1);
+  	--rotate-time-func: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  	/* COLORS */
+  	
+  	--clr-main: #090D10;
+  	--clr-secondary: #21292C;
+  	--clr-card: #0e1418;
+  	--clr-dialog: #090D1090;
+  	--clr-attr-item: #090d10;
+  	--clr-button-text: var(--clr-main);
+  	--clr-accent: #E3DDA4;
+  	--clr-heading: #C2B477;
+  	--clr-load-shuffle: crimson;
+  	--clr-text: #f1f1f1;
+  	--clr-legendary: #f8dc46;
+/*	--clr-legendary: #B8860B; */
+  	--clr-win: lawngreen;
+  	--clr-lose: crimson;
+  	--clr-tie: lightsteelblue;
+  	--clr-attr-list: rgba(5, 5, 5, 0.8);
 }
 @media (prefers-color-scheme: dark){
 	:root{
