--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -187,30 +187,22 @@ body {
 	color: var(--clr-accent);
 }
 .deck ul {
-	display: flex;
-	flex-flow: column;
-	margin: 0 auto;
+	--item-size: 20px;
+	--row-size: calc(var(--item-size) / 2);
+	display: grid;
+	grid-auto-rows: var(--row-size);
+	margin: .5rem auto;
 	width: 100%;
 	align-items: center;
-	gap: 0.2rem;
-	transition: all 300ms;
 }
 .item {
-	--width: 20px;
-	width: var(--width);
+	width: var(--item-size);
 	aspect-ratio: 1 / 1.5;
-	background-color: var(--clr-accent);
-	border-radius: calc(var(--width) / 4);
-	display: grid;
-	place-items: center;
+	background-color: var(--clr-card);
+	border: 1.5px solid var(--clr-accent);
+	border-radius: calc(var(--item-size) / 10);
 }
-.item img {
-	display: block;
-	box-sizing: border-box;
-	width: 80%;
-	height: auto;
-	object-fit: cover;
-}
+
 /* DIALOG WIN/LOOSE STYLE */
 @keyframes showDialogAnim {
 	0% {
@@ -507,11 +499,6 @@ footer {
 	}
 }
 @media (min-width: 1024px) {
-	.deck ul {
-	  max-width: 4rem;
-		justify-content: center;
-		flex-flow: row wrap;
-	}
 	.footer__logo {
 		width: 10rem;
 	}
